# stream-alerts

./: .gitignore  README.md  bun.lockb  package.json  tailwind.config.js  vite.config.ts
.bruno/: Health check.bru  bruno.json
.bruno/Twitch/: Auth using code.bru  DEV Auth using tokens.bru  Followers count.bru  User.bru
.bruno/environments/: local.bru
src/: App.css  App.tsx  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  store.rs  ws_server.rs
src-tauri/src/api/: mod.rs
src-tauri/src/common/: errors.rs  http_error.rs
src-tauri/src/config/: db.rs  store.rs
src-tauri/src/twitch/: commands.rs  controller.rs  eventsub.rs  mock_client.rs  mod.rs  oauth2.rs  sdk.rs  store.rs
src-tauri/src/websocket/: mod.rs  twitch.rs
src/components/custom/: ConfirmDialog.tsx  DebugPanel.tsx  NavMenu.tsx  NavMenuLink.tsx
src/components/ui/: avatar.tsx  button.tsx
src/hooks/: api-queries.ts
src/lib/: api.ts  math.ts  socket.ts  window.ts
src/routes/: __root.tsx  _app.events.tsx  _app.index.tsx  _app.logs.tsx  _app.moderation.tsx  _app.settings.tsx  _app.tsx  _app.widgets.tsx  auth.tsx  auth.twitch-callback.tsx  index.tsx  moderation.tsx  settings.tsx  w.tsx
src/store/: settings.store.ts
src/types/: accounts.type.ts  accounts.types.ts  assets.types.ts  events.types.ts  spine-widget.types.ts
