[package]
name = "stream-alerts"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stream_alerts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
dotenv = "0.15.0"

[dependencies]
tauri = { version = "2.0.4", features = ["devtools"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7.7"
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
socketioxide = "0.14.1"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
tower-http = { version = "0.6.1", features = ["cors"] }
sled = "0.34.7"
anyhow = "1.0.89"
twitch_api = { version = "0.7.0-rc.8", features = [
  "client",
  "twitch_oauth2",
  "helix",
  "eventsub",
  "reqwest",
  "hmac",
  "deny_unknown_fields",
] }
tauri-plugin-localhost = "2.0.1"
futures = "0.3.31"
axum-macros = "0.4.2"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release.package.wry]
debug = true
debug-assertions = true
